--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -182,11 +182,11 @@ Outer pipes Cell padding
 <!-- **Challenge and initiative** -->
 <!-- **Lingua franca** -->
 
-For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the online course manual textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
+For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the online course manual textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game. The implementation of a new game design pattern (GDP) involves adding new code to the game. The amount of code and changes required varies depending on its complexity. Larger changes typically require more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Olivia is one of the younger participants, and the parent, Suzanna, has taken on the role of solving harder coding problems and, in doing so, has built important proficiency in coding practice.
 
-The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to do so. When the code problem has been solved, she signals to her child that is her turn to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
+The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. Suzanna overcomes her own hesitancy about asking for facilitator help by encouraging her child to seek assistance. When the coding problem is resolved, Suzanna signals to Olivia that it is her turn to return to the design process. This indicates that Suzanna recognises the greater potential for effective input from her child at these moments. After the blockage caused by debugging is removed, Suzanna immediately re-engages Olivia, prompting her to play-test the game. Suzanna skilfully navigates the process, eliciting and incorporating her child's interests in a variety of ways.
 
-The child also show initiative, in particular in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the name of game design patterns they are working on (_Adding Levels_ and  _Keys and Doors_ ) (Key 44 in Vignette 2). There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction. The use of GDPs terms as a lingua franca, a concept underpinning the utility of design pattern more generally [@erickson_lingua_2000], to help design for others is explored in the next section. More broadly the use of GDP concepts as an evolving design language to give feedback, to share knowledge, request and for other uses during community activity,  pair interactions and individual work are explored in following sections.
+The child also shows initiative, particularly in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system, which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system becomes especially evident in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the names of the game design patterns they are working on (Adding Levels and Keys and Doors) (Key 44 in Vignette 2). Evidence suggests that Olivia (child) is building a connection to the game-making pattern. In Key 12 in Vignette 2, abbreviations of the GDP names, Key and Door and Levels, are repeated in a sing-song voice. Additionally, my description of the Key and Door pattern as a challenging pattern during the session's starting orientation, outlined in Vignette 11, provokes a strong reaction. The use of GDP terms as a lingua franca, a concept that underpins the broader utility of design patterns [@erickson_lingua_2000], to facilitate designing for others is explored in the next section. More broadly, the use of GDP concepts as an evolving design language for providing feedback, sharing knowledge, making requests and other purposes during community activities, pair interactions and individual work is explored in the following sections.
 
 <!-- **Transition**
 
@@ -219,19 +219,19 @@ PULL OUT AN EXAMPLE -->
 
 ## Use of GDPs in the cultural plane / community level of activity
 
-Following Rogoff's [-@rogoff_observing_1995] three planes approach of analysis, the following section explores the use of GDPs at at community plane of activity. While Rogoff's early analysis of activity on a cultural plane focused on the metaphor or apprenticeship, focusing on an already existing community, her later work with Gutiérrez [-@gutierrez_cultural_2003] has a greater focus on cultural activity as dynamic; examining existing and emerging norms and repertoires adapted from participants participation in other communities and contexts.
+Following Rogoff's [@rogoff_observing_1995] three planes approach to analysis, the following section explores the use of GDPs at the community plane of activity. While Rogoff's earlier analysis of activity on a cultural plane emphasised the metaphor of apprenticeship, focusing on an already existing community, her later work with Gutiérrez [@gutierrez_cultural_2003] places greater emphasis on cultural activity as dynamic. This perspective examines existing and emerging norms and repertoires, adapted from participants’ engagement in other communities and contexts.
 
 ### The role of GDPs to facilitate learners to design for others
 
 <!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
 
-**The use of GDPs (especially during playtesting) can aid the process of imagining end user experiences**
 
-This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game. Chapter 2 explored the proposal of professional and participatory design processes is that design should be informed by end user experience [@redstrom_towards_2006] , and the challenges involved in undertaking such a "operationalization of empathy" [@surma-aho_conceptualization_2022, p.1]. Taking a CHAT interpretation, this process involves shifts in perspectives from participants as they engage with objectives on different scopes of activity. For example, in the vignette above Olivia(c) persues a quirky design goal during her pair design work, which Suzanna(p) resists. Imagining a the shift in perspective to the imagined audience at a community level of interaction, the parent is keen to ensure a sense of challenge for the imagined player.
+The use of GDPs, particularly during playtesting, can support the process of imagining end-user experiences. This section examines how the concept of, and experience with, implementing GDPs encouraged participants to envision the experience of end users of their games. Chapter two explored the proposition from professional and participatory design processes that design should be informed by end-user experience [@redstrom_towards_2006], as well as the challenges involved in undertaking such an *"operationalization of empathy"* [@surma-aho_conceptualization_2022, p.1]. From a CHAT interpretation, this process involves shifts in perspective by participants as they engage with objectives across different scopes of activity. For instance, in the vignette above, Olivia (child) pursues a quirky design goal during her paired design work, which Suzanna (parent) resists. Imagining a shift in perspective to the intended audience at a community level of interaction, the parent aims to ensure a sense of challenge for the imagined player.  
 
-Suzanna shares _"Must be quite hard to get through that door._" when Olivia places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ Olivia(c) seems determined to remove all hazards. _"It is for me!"_ she counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play.
 
-A later interaction with a peer shows that she is indeed imagining the experience of the immediate audience of fellow game makers and supporting students. _"I like making it frustrating. that other people find it frustrating!"_. Olivia(c) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way to reacj her final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus intended to provoking player surprise.
+Suzanna shares *"Must be quite hard to get through that door."* when Olivia places the exit door high above a platform. She then continues, *“It’s no fun having a game without any hazards to avoid.”* Olivia (child) seems determined to remove all hazards. *"It is for me!"* she counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play.  However, a later interaction with a peer shows that Olivia (child) is indeed imagining the experience of the immediate audience of fellow game makers and supporting students. *"I like making it frustrating. That other people find it frustrating!"* Olivia (child) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, *"If people tried hard they would get to my level,"* shows her awareness that not all players will persist in the same way to reach her final level, which has only rewards and no hazards. This being a *"secret, special"* experience, which plays against the norms of platform game design, is thus intended to provoke player surprise.
+
+
 
 <!-- While Suzanna(p) imagine a user experience and make a playable game conforming to her perception of norms, Olivia's(c) playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 wider goal of making an engaging game if it interferes with the engagement of the test users. -->
@@ -243,35 +243,40 @@ One is just to make a playable game experience which by design involves an imagi
 <!--emonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
 NOTE #### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - -->
 
-**There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
-The discussion of game challenge, specifically comments about how 'hard' participant games were a particularly common interaction during playtesting. Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of how a player jumps should feel stemming from the participants feedback on the feeling of lack of control over the player's character in the game. These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003].
+There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
+DEVELOP THIS POINT.
+
+In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations. BRIEFLY LIST HERE
+
+INSERT VIDEO DATA SUPPORT
+E.g. The use of GDPs to facilitate learners to design for others was present in 6 of the 12 video capture sessions analysed.
 
 
 <!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
 
 <!-- **Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective** -->
 
-Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts. GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game. In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
+### GDPs facilitate the use of wider funds of knowledge and interest
 
-INSERT VIDEO DATA SUPPORT
-Such use was present in 6 of the 10 video capture sessions analysed.
-
-### GDPs facilitate the use of wider funds of knowledge / interest
-
-**GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
 <!-- [Be sure to explore context further and put in intro]. -->
 
-One premise driving my exploration in the use of gameplay features as a feature in pedagogy is that the tacit knowledge of gaming conventions of most family members is extensive even if they are not avid gamers due to the extensive influence of video game culture and experience into mainstream culture including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], in particular retro gaming [@heineman2014public]. As such, the process of facilitating ways of surfacing and working gwith such tacit knowledge aligns with Moll's concept of funds on knowledge, and if aligned, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework these funds of identity and knowledge can be seen as tools which facilitate the transfer of potentially useful concepts across the boundaries between activity systems, in this case between home activity and that happening in this game making community, with the associated inclusive benefits of working with participants home interests explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines motivations of social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets narratives, sustain engagement in digital making projects [@sefton-green_mapping_2013].
+GDPs can allow participants to share and explore funds of knowledge and interest in the emerging learning community. One premise driving my exploration of the use of gameplay features in pedagogy is that the tacit knowledge of gaming conventions among most family members is extensive, even if they are not avid gamers, due to the extensive influence of video game culture in mainstream culture, including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], particularly retro gaming [@heineman2014public]. As such, the process of facilitating ways to surface and work with such tacit knowledge aligns with Moll's concept of funds of knowledge, and, potentially, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014].
 
-In the last chapter I outlined processes facilitating participants could to create and incorporate graphical, audio assets and narratives elements into their games and, referencing Appendix. briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs which aligned with the MDA (mechanics, dynamics and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of patterns aesthetics, in Vignette 5 Molly and Nadine showing identification with graphical making process and the process of bringing it the game. Beyond their internal family interaction, they share this artistic flair and attention to detail into the emerging learning community.
+Within a CHAT framework, these funds of identity and knowledge can be seen as tools that facilitate the transfer of potentially useful concepts and practices across the boundaries between activity systems, in this case, between home activity and that happening in this game-making community. The associated inclusive benefits of working with participants' home interests are explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013].
+
+In the last chapter I outlined processes facilitating participants could to create and incorporate graphical, audio assets and narratives elements into their games and, referencing Appendix.tech.gameframework  briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs which aligned with the MDA (mechanics, dynamics and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of patterns aesthetics, in Vignette 5 Molly and Nadine showing identification with graphical making process and the process of bringing it the game. Beyond their internal family interaction, they share this artistic flair and attention to detail into the emerging learning community.
+
+In the last chapter, I outlined processes facilitating participants in creating and incorporating graphical, audio assets, and narrative elements into their games, and, referencing Appendix.tech.gameframework, briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs, which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of pattern polish/aesthetics, in Vignette 5, Molly and Nadine show identification with the graphical-making process and the process of bringing it into the game. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community.
 
 <!-- EXTEND OR SIGNPOST - ADD TO APPENDIX COMMENTARY  - CHECK WITH NEXT CHAPTER. -->
 
-In addition to issues of aesthetics explored in the section above, home knowledge game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of how feedback of participants on the dynamics of Molly's game during playtesting. Turning to game mechanics, in part two of Vignette 7, Bertie comments on Toby's game which has a dominant game experience of timed jumping: _"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"_. Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to shows his knowledge and analysis of gameplay patterns.
 
-The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed a choice over participant making paths, allowing an alignment with home interests. While this study is exploratory, and not designed to be representational, observations from video data in this study supports existing research on use of funds of knowledge and interest in digital projects as motivating and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1].
+In addition to issues of aesthetics explored in the section above, home knowledge of game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Molly's game during playtesting. Turning to game mechanics, in part two of Vignette 7, Bertie comments on Toby's game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"* Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns.
+
+
+The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. While this study is exploratory and not designed to be representational, observations from video data in this study support existing research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1].
 
 SUPPORTING DATA FROM VIDEO ANALYSIS
 
@@ -304,7 +309,7 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 <!-- While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implementation of GDPs.   -->
 <!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
 
-Within the emerging idioculture of the game making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants enriching the games of participants. At times participant were influenced by playing the games of others and at times they would request the direct help of peers to implement GDPs in their own games. In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
+Within the emerging idioculture of the game-making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games. In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
 
    Bertie: Why’s that enemy in every level
    Toby: He’s not.
@@ -321,16 +326,11 @@ Within the emerging idioculture of the game making sessions, and during playtest
    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
-**Analysis:** This exchange shows the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted through Bertie noticing Toby helping Nadine and Harper add levels to their games. Toby's emerging roles as a specialist that the community can draw on for practical help, and similar examples (see also that of Nadine in Vignette 5), were welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+This exchange shows the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nadine and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nadine in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents. Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+
 
 <!-- EVIDENCE? PRESENCE / FREQUENCY?   -->
 <!-- NOTE ADD MORE EVIDENCE? -->
-
-Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
-
-
-
-<!-- The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. -->
 
 <!-- ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2. -->
 
@@ -338,21 +338,19 @@ Other examples of propagating patterns include placing hazards in tricky places 
 
 
 
-**New GDPs emerged from existing patterns through peer activity during playtesting**
+<!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
+<!-- DEVELOP -->
 
-In addition to the propagation of GDPs offered n the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, Olive's concept of a level that eschews challenge and offers only rewards, a type of bonus stage pattern,  emerged through playful experimentation (see Vignette 2). Similarly, the concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
-DEVELOP
-
-These novelties may emerge spontaneously or have a source in  part participants' funds of gaming knowledge. In either case once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and use approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
+In addition to the propagation of GDPs offered in the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, Olive's concept of a level that eschews challenge and offers only rewards, a type of bonus stage pattern, emerged through playful experimentation (see Vignette 2). Similarly, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding a moving enemies GDP. The extensive use of that pattern dominated the game challenge to such an extent that it became essential for players to quickly identify and use 'safe zones'. These novel concepts may have emerged spontaneously or have a source in part from participants' funds of gaming knowledge. In either case, once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
 
 
 <!-- **synthesis of this section** -->
 
-This section has explored the use of GDPs as within strategies and processes that occur at a community level in way which demonstrate the transfer between different activity systems in a way which supports the perspective of Gutiérrez [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning. Playtesting a medium for an a shared idioculture to emerge and as such became a significant part of pedagogy of the learning design. While the design processes directly linked implementing GDPs were one of the most significant in video data others were present. The role of playtesting and other community interactions including warm up games, session reflections are explored in relation to the development of agency in the following chapter.
+This section has explored the use of GDPs within strategies and processes that occur at a community level in a way that demonstrates the transfer between different activity systems, supporting Gutiérrez's perspective [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning. Playtesting served as a medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. The role of playtesting and other community interactions, including warm-up games and session reflections, are explored in relation to the development of agency in the following chapter.
 
 ## GDPs used in the process of guided participation (Target 2500)
 
-This section explores data on the use of GDP from the perspective of interpersonal interaction. Here the process of being guided into planned activity or peer work is exploratory contributing to interpersonal processes which serve the completion of the activity. From observations of video data, I describe five categories of how GDPs are used in diverse meditational strategies most frequently through pair participants interaction.
+This section explores data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activity or peer work is exploratory, contributing to interpersonal processes that serve the completion of the activity. Based on observations of video data, I describe four categories of how GDPs are used in diverse meditational strategies, most frequently through pair participants' interactions.
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
@@ -366,13 +364,10 @@ This section examines the use of GDPs to facilitate guided participation via int
 ### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials (600)
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
-
-**The use of a catalogue of design patterns addresses a tension of participants choice and the need for documentation to support the technical implementation of code structures. However, not all participants used provided instructions and develop diverse ways to access support to implement patterns.**
-
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
 - ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
-At the cultural level of analysis of activity, the previous section  outlined that providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section also examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on an interpersonal plane of activity.
+The use of a catalogue of design patterns addresses a tension of participants choice and the need for documentation to support the technical implementation of code structures. However, not all participants used provided instructions and develop diverse ways to access support to implement patterns. At the cultural level of analysis of activity, the previous section outlined that providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section also examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on an interpersonal plane of activity.
 
 The previous chapter explored, from my perspective as a facilitator, the use of a menu of GDPs helped address a the tension between of participant choice the need for supporting materials on code implementation. Vignette 9, shows one of the few short episodes of my addressing the whole group class talk where I outline the webpage listing the menu of patterns _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_. In addition to the use of written documentation as a framework, in P2 I guided supporting student facilitators to ask what patterns they were currently working or had recently completed as a way of provoking informal reflection on project progress. Given this integration of these elements into the learning design from P2 onwards, it would appear natural that participant use the provided framework at least in some ways. Despite this, the evolving use of this documentation, the variations within that use and interpersonal interactions use merit attention due to the diversity, evolution and fundamental importance of use of GDPs at this interpersonal scope.
 
